--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.3.1",
+    "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "reactfire": "^4.2.3",
+    "recharts": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
