--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "firebase": "^11.3.1",
+    "firebase": "^11.4.0",
     "lucide-react": "^0.476.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
-    "reactfire": "^4.2.3",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
